# azrs---Lora

./: .gitignore  README.md
client/: #Makefile#  CLora.cpp  CLora.h  CMakeLists.txt  Card.cpp  Card.h  Computer.cpp  Computer.h  Game.cpp  Game.h  GameOnline.cpp  GameOnline.h  GameVsComputer.cpp  GameVsComputer.h  Izuzeci.cpp  Izuzeci.hpp  Lora  Lora.pro  Lora.pro.user.0b73697  Lora.pro.user.7398e40  Lora.pro.user.99ff09c  Makefile  clabel.cpp  clabel.h  config.cpp  config.h  deck.cpp  deck.h  define.h  main.cpp  moc_Card.cpp  moc_Game.cpp  moc_clabel.cpp  moc_deck.cpp  moc_help.cpp  moc_mainwindow.cpp  moc_player.cpp  moc_stats.cpp  moc_talon.cpp  moc_tcpclient.cpp  (+10 more)
client/gui/: help.cpp  help.h  help.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  stats.cpp  stats.h  stats.ui  tcpclient.cpp  tcpclient.h  tcpclient.ui  ui_stats.h  ui_tabla.h
resources/background/: background_license.txt
resources/cards/: cards_license
server/: CMakeLists.txt  Lora_sr_RS.ts  Makefile  main.cpp  moc_predefs.h  moc_tcpserver.cpp  tcpServer  tcpServer.pro  tcpserver.cpp  tcpserver.h  ui_tcpserver.h
specifikacija/: InicijalnaVerzijaProjektneDokumentacije.docx  SlucajUpotrebeIgranjeJednePartije.docx
